<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:textAlignment="center"
    tools:context=".ResContainer">



    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        >

        <include layout="@layout/layout_toolbar"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorPrimaryLight"
            android:text="@string/res_paramA"
            android:textStyle="bold|italic"
            android:textAlignment="center"
            android:textSize="20dp"/>

        <TextView
            android:id="@+id/valor_A"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="18sp"
            android:textAlignment="center"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorPrimaryLight"
            android:text="@string/res_paramB"
            android:textStyle="bold|italic"
            android:textAlignment="center"
            android:textSize="20dp"/>
        <TextView
            android:id="@+id/valor_B"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="18sp"
            android:textAlignment="center"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorPrimaryLight"
            android:text="@string/param_a"
            android:textStyle="bold|italic"
            android:textAlignment="center"
            android:textSize="20dp"/>
        <TextView
            android:id="@+id/valor_param_a"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="18sp"
            android:textAlignment="center"/>
        <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimaryLight"
        android:text="@string/res_param_b"
        android:textStyle="bold|italic"
        android:textAlignment="center"
        android:textSize="20dp"/>
        <TextView
            android:id="@+id/valor_param_b"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="18sp"
            android:textAlignment="center"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorPrimaryLight"
            android:text="@string/res_param_coeficiente_correlacion"
            android:textStyle="bold|italic"
            android:textAlignment="center"
            android:textSize="20dp"/>
        <TextView
            android:id="@+id/valor_param_coef_correl"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="18sp"
            android:textAlignment="center"/>
    </LinearLayout>


</android.support.constraint.ConstraintLayout>