<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LinealActivity"
    android:fitsSystemWindows="true"
    android:background="@color/colorPrimary">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true"
        >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            >

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">


                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    >
                <android.support.design.widget.TextInputEditText
                    android:id="@+id/editText_lineal_x"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="numberDecimal"
                    android:hint="@string/text_view_x"
                    />

                </android.support.design.widget.TextInputLayout>


            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    >
                <android.support.design.widget.TextInputEditText
                    android:id="@+id/editText_lineal_y"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="numberDecimal"
                    android:hint="@string/text_view_y"
                    />

                </android.support.design.widget.TextInputLayout>
            </LinearLayout>

            <Button
                android:id="@+id/add_dato"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/btn_ingresar"
                android:onClick="ingresarDato"

                />
            <Button
                android:id="@+id/calcular"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/btn_calcular"
                android:onClick="calcular"

                />

            <ListView
                android:id="@+id/lista_de_datos"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"></ListView>
        </LinearLayout>
    </ScrollView>



</android.support.design.widget.CoordinatorLayout>